Fixed issues with layout on mobile. Reorganized layout of about page.

--- a/style.css
+++ b/style.css
@@ -104,13 +104,15 @@ body {
 
 .title-bar {
 	width: 0%;
-	max-width: 20%;
+	max-width: fit-content;
 	margin: 8px 0px 0px 8px;
-	padding: 1px 0px 0px 8px;
+	padding: 1px 8px 0px 8px;
 
 	font-family: "Rajdhani";
 	font-weight: 500;
-	font-size: 14px;
+	font-size: 10px;
+
+	white-space: nowrap; 
 
 	animation: expand_open 1.2s ease-in-out 0s forwards;
 }
@@ -212,14 +214,8 @@ body {
 .section { 
 	text-align: center;
 	width: 100%;
-	margin: 48px auto 0px auto;
+	margin: 32px auto 0px auto;
 }
-
-.centered-container {
-	display: inline-flex;
-	justify-content: flex-start;
-	text-align: left;
-  }
 
 .profile-container {
 	display: inline-grid;
@@ -254,16 +250,8 @@ body {
 	grid-row: 1; grid-column: 1;
 }
 
-.grid-container {
-	display: inline-grid;
-	opacity: 0%;
-	width: 0%;
-	height: fit-content;
-	max-width: 180px;
-	animation: expand_open 0.2s ease-out 2.8s forwards;
-}
-
 #edu-title, #contact-title {
+	text-align: center;
 	opacity: 0%;
 	max-width: 150px;
 	animation: appear 0.2s linear 3.0s forwards;
@@ -271,7 +259,7 @@ body {
 
 #edu-info {
 	width: 65%;
-	margin: 4px 0px 4px 16px;
+	margin-top: 4px;
 
 	opacity: 0%;
 	animation: appear 0.2s linear 3.0s forwards;
@@ -279,8 +267,8 @@ body {
 
 #contact-info {
 	width: fit-content;
-	margin: 4px 0px 0px 16px;
 	padding: 0px 8px 0px 8px;
+	margin: 4px auto 0px auto;
 
 	font-family: 'Rajdhani';
 	font-weight: 600;
@@ -292,17 +280,26 @@ body {
 	animation: appear 0.2s linear 3.0s forwards;
 }
 
-.grid-container h2 {
+.info-container {
+	opacity: 0%;
+	width: 0%;
+	margin: 0px auto 0px auto;
+	height: fit-content;
+	max-width: 180px;
+	animation: expand_open 0.2s ease-out 2.8s forwards;
+}
+
+.info-container h2 {
 	font-weight: 700;
 	font-size: 20px;
 }
 
-.grid-container h3 {
+.info-container h3 {
 	font-weight: 500;
 	font-size: 12px;
 }
 
-.grid-container p {
+.info-container p {
 	font-weight: 400;
 	font-size: 12px;
 }
@@ -377,27 +374,36 @@ body {
 	animation: appear 0.2s linear 3.2s forwards;
 }
 
-#skills-section-container {
+#skills-container {
 	text-align: center;
 }
 
-#skills-grid {
-	margin: 8px 0px 0px 16px;
-
-	opacity: 0%;
-	animation: appear 0.2s linear 3.2s forwards;
-}
-
 #skills-title {
-	text-align: left;
 	opacity: 0%;
 	width: 0%;
 	max-width: 150px;
 	animation: expand_open 1.2s ease-in-out 3.2s forwards;
 }
 
+#skills-subtitle {
+	opacity: 0%;
+
+	font-family: "Rajdhani";
+	font-weight: 600;
+	font-size: 16px;
+	color: #d0d0d0;
+
+	animation: appear 0.2s linear 3.2s forwards;
+}
+
+#skills-grid {
+	margin: 4px 0px 0px 16px;
+
+	opacity: 0%;
+	animation: appear 0.2s linear 3.2s forwards;
+}
+
 .skill {
-	display: inline;
 	max-width: 128px;
 	margin: 0px 4px 4px 0px;
 }
